// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartBox error 1`] = `
<Uncontrolled(Panel)
  className="chart-box"
  header={
    <h3
      className="pointer panel-title"
    >
      some title
    </h3>
  }
  key="2"
>
  <PanelHeading
    bsClass="panel"
    componentClass="div"
  >
    <h3
      className="pointer panel-title"
    >
      some title
    </h3>
  </PanelHeading>
  <PanelBody
    bsClass="panel"
    collapsible={false}
  >
    <Loader
      spinnerSize="lg"
      status="PENDING"
    >
      <DonutChart
        config="regular"
        key="2-chart"
        noDataMsg="No data available"
        onclick={[Function]}
        title={
          Object {
            "type": "percent",
          }
        }
        unloadData={false}
      />
      <MessageBox
        icontype="error-circle-o"
        key="2-error"
        msg="some error"
      />
    </Loader>
  </PanelBody>
</Uncontrolled(Panel)>
`;

exports[`ChartBox pending 1`] = `
<Uncontrolled(Panel)
  className="chart-box"
  header={
    <h3
      className="pointer panel-title"
    >
      some title
    </h3>
  }
  key="2"
>
  <PanelHeading
    bsClass="panel"
    componentClass="div"
  >
    <h3
      className="pointer panel-title"
    >
      some title
    </h3>
  </PanelHeading>
  <PanelBody
    bsClass="panel"
    collapsible={false}
  >
    <Loader
      spinnerSize="lg"
      status="PENDING"
    >
      <DonutChart
        config="regular"
        key="2-chart"
        noDataMsg="No data available"
        onclick={[Function]}
        title={
          Object {
            "type": "percent",
          }
        }
        unloadData={false}
      />
      <MessageBox
        icontype="error-circle-o"
        key="2-error"
        msg="some error"
      />
    </Loader>
  </PanelBody>
</Uncontrolled(Panel)>
`;

exports[`ChartBox resolved 1`] = `
<Uncontrolled(Panel)
  className="chart-box"
  header={
    <h3
      className="pointer panel-title"
      data-placement="top"
      data-toggle="tooltip"
      onClick={[Function]}
      title="sone tooltip"
    >
      some title
    </h3>
  }
  key="2"
>
  <PanelHeading
    bsClass="panel"
    componentClass="div"
  >
    <h3
      className="pointer panel-title"
      data-placement="top"
      data-toggle="tooltip"
      onClick={[Function]}
      title="sone tooltip"
    >
      some title
    </h3>
  </PanelHeading>
  <PanelBody
    bsClass="panel"
    collapsible={false}
  >
    <Loader
      spinnerSize="lg"
      status="PENDING"
    >
      <DonutChart
        config="regular"
        data={
          Array [
            Array [
              1,
              2,
            ],
          ]
        }
        key="2-chart"
        noDataMsg="No data available"
        onclick={[Function]}
        title={
          Object {
            "type": "percent",
          }
        }
        unloadData={false}
      />
      <MessageBox
        icontype="error-circle-o"
        key="2-error"
        msg="some error"
      />
    </Loader>
  </PanelBody>
</Uncontrolled(Panel)>
`;
